feat: Criado Endpoint para Atualizar as provas Detalhadas